Bug fixing: the content overlaps with the navigation bar

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -19,7 +19,7 @@ main {
   display: flex;
   flex-wrap: wrap;
   max-width: None;
-  width: 100%;
+  width: 85%;
   margin: 2rem 0;
   padding: 1rem;
 }
